# llm-council-ollama

./: .coverage  .dockerignore  .env.example  .gitignore  README.md  SECURITY.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
backend/: Dockerfile  config.py  cost_updater.py  council.py  main.py  openrouter.py  providers.py
frontend/: .dockerignore  Dockerfile
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/components/: ChatInterface.jsx  SettingsModal.css  SettingsModal.jsx  Sidebar.css  Sidebar.jsx  Stage1.css  Stage1.jsx  Stage2.jsx  Stage3.jsx
tests/: README.md  test_providers.py
tests/integration/: test_api.py
tests/unit/: test_council.py  test_openrouter.py  test_storage.py
